add serialize, deserialize time trial